@@ -17,8 +17,15 @@ import lombok.RequiredArgsConstructor;
 public class BoardService {
     private final BoardRepository boardRepository;
 
-    public List<BoardResponse.ListDTO> 게시글목록() {
-        List<Board> boards = boardRepository.findAll();
-        return boards.stream().map(BoardResponse.ListDTO::new).toList();
+    public List<BoardResponse.ListDTO> 게시글목록보기(int page) {
+        int limit = 3; // 한 페이지당 보여줄 개수
+        int offset = page * limit; // 0페이지는 0개 스킵, 1페이지는 3개 스킵 -> 시작 인덱스!!
+
+        // JPQL로 작성된 쿼리 호출 (limit, offset 전달)
+        List<Board> boards = boardRepository.findAll(limit, offset);
+
+        return boards.stream()
+                .map(BoardResponse.ListDTO::new)
+                .collect(Collectors.toList());
     }
 }
